// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddressBar /> should match to snapshot when props.isLoading is true 1`] = `
<div
  className="AddressBar"
>
  <div
    className="AddressBar__front-button-box"
  >
    <button
      className="AddressBar__button"
      data-name="go-back-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
    <button
      className="AddressBar__button"
      data-name="go-forward-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
    <button
      className="AddressBar__button"
      data-name="stop-btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
  </div>
  <div
    className="AddressBar__address"
  >
    <div
      className="AddressBar__address-value"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <input
        className="AddressBar__address-input"
        onChange={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
    </div>
    <button
      className="AddressBar__address-button"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="AddressBar__home-icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
      <div
        className="AddressBar__home-url"
      />
    </button>
  </div>
  <div
    className="AddressBar__end-button-box"
  >
    <button
      className="AddressBar__button AddressBar__more-btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
    <button
      className="AddressBar__pin-btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="AddressBar__pin"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
  </div>
</div>
`;

exports[`<AddressBar /> should match to snapshot when render default 1`] = `
<div
  className="AddressBar"
>
  <div
    className="AddressBar__front-button-box"
  >
    <button
      className="AddressBar__button"
      data-name="go-back-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
    <button
      className="AddressBar__button"
      data-name="go-forward-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
    <button
      className="AddressBar__button"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
  </div>
  <div
    className="AddressBar__address"
  >
    <div
      className="AddressBar__address-value"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <input
        className="AddressBar__address-input"
        onChange={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
    </div>
    <button
      className="AddressBar__address-button"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="AddressBar__home-icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
      <div
        className="AddressBar__home-url"
      />
    </button>
  </div>
  <div
    className="AddressBar__end-button-box"
  >
    <button
      className="AddressBar__button AddressBar__more-btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
    <button
      className="AddressBar__pin-btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="AddressBar__pin"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
  </div>
</div>
`;

exports[`<AddressBar /> should match to snapshot when state.isMenuOpen is true 1`] = `
<div
  className="AddressBar"
>
  <div
    className="AddressBar__front-button-box"
  >
    <button
      className="AddressBar__button"
      data-name="go-back-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
    <button
      className="AddressBar__button"
      data-name="go-forward-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
    <button
      className="AddressBar__button"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
  </div>
  <div
    className="AddressBar__address"
  >
    <div
      className="AddressBar__address-value"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <input
        className="AddressBar__address-input"
        onChange={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
    </div>
    <button
      className="AddressBar__address-button"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="AddressBar__home-icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
      <div
        className="AddressBar__home-url"
      />
    </button>
  </div>
  <div
    className="AddressBar__end-button-box"
  >
    <button
      className="AddressBar__button AddressBar__more-btn AddressBar__more-btn--active"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
    <ConfigMenu
      buttonRef={
        Object {
          "current": null,
        }
      }
      currentUrl=""
      id=""
      onClose={[Function]}
      onEditWidget={[Function]}
      onMakeWidget={[Function]}
      onModalOpen={[Function]}
      onUpdateWidgetInfo={[Function]}
      reloadInterval={0}
    />
    <button
      className="AddressBar__pin-btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="AddressBar__pin"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
  </div>
</div>
`;

exports[`<AddressBar /> should match to snapshot when state.isMouseOverInput true 1`] = `
<div
  className="AddressBar"
>
  <div
    className="AddressBar__front-button-box"
  >
    <button
      className="AddressBar__button"
      data-name="go-back-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
    <button
      className="AddressBar__button"
      data-name="go-forward-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
    <button
      className="AddressBar__button"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
  </div>
  <div
    className="AddressBar__address"
  >
    <div
      className="AddressBar__address-value"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <input
        className="AddressBar__address-input"
        onChange={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
      <button
        className="AddressBar__address-cancel"
        onClick={[Function]}
        type="button"
      >
        <SVGInline
          className="AddressBar__cancel-icon"
          classSuffix="-svg"
          cleanup={Array []}
          cleanupExceptions={Array []}
          component="span"
          svg=""
        />
      </button>
    </div>
    <button
      className="AddressBar__address-button"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="AddressBar__home-icon"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
      <div
        className="AddressBar__home-url"
      />
    </button>
  </div>
  <div
    className="AddressBar__end-button-box"
  >
    <button
      className="AddressBar__button AddressBar__more-btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
    <button
      className="AddressBar__pin-btn"
      onClick={[Function]}
      type="button"
    >
      <SVGInline
        className="AddressBar__pin"
        classSuffix="-svg"
        cleanup={Array []}
        cleanupExceptions={Array []}
        component="span"
        svg=""
      />
    </button>
  </div>
</div>
`;
